Source/WebCore/page/scrolling/ScrollingTreeFrameScrollingNode.h
@@ -70,6 +70,7 @@ private:
     LayoutPoint localToContentsPoint(LayoutPoint) const final;
 
     WEBCORE_EXPORT void updateViewportForCurrentScrollPosition(Optional<FloatRect>) override;
+    bool scrollPositionAndLayoutViewportMatch(const FloatPoint& position, Optional<FloatRect> overrideLayoutViewport) override;
 
     void dumpProperties(WTF::TextStream&, ScrollingStateTreeAsTextBehavior) const override;
 
